# bluse-iot

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile  README.md  biot_configure.h.in  build_third.sh  config.mk  depends.sh  gen_protocol.sh
doc/: depend.md  layer.html  layer.md  plan.md  设计方案.md
protocol/: README.md
protocol/upgrade/: up_firmware_info.proto
source/: Basic_ACCESS-KEY.txt  DEVICES-KEY.txt  credentials.csv  华为云资源.txt
src/: BUILD  README.md  main.cpp
src/basic/: README.md
src/basic/base/: biot_time.cpp  biot_time.h  enum_map.h  proto_json.h  raw_protocol.h  upgrade_firmware.h
src/basic/defs/: app_module_id.h  app_working.h  device_type.h  ds.h  enum_def.h  error_code.cpp  error_code.h  func_module.h  language.h  reflection.h  result.cpp  result.h
src/basic/defs/proto/: README.md  error_code.proto
src/basic/if/: README.md
src/basic/log/: biot_log.cpp  biot_log_map.h
src/boot/: README.md  boot.cpp  boot.h  boot_basic.cpp  boot_env.cpp  boot_log.cpp  boot_loop.cpp  boot_module.cpp  boot_parameter.cpp  boot_pre.cpp  boot_signal.cpp  boot_signal.h
src/config/: args_dec.h  configure.h  default_parameter.cpp  default_parameter.h  parameter.h  sec_param.cpp  sec_param.h  version.cpp  version.h
src/config/capa/: README.md  capa.cpp  capa.h
src/config/capa/common/: capa_function.h  capa_hardware.h  capa_network.h  capa_protocol.h  capa_reboot.h  capa_software.h  capa_upgrade.h  capa_workmode.h
src/config/capa/product/: default_product.cpp
src/config/default_param/capability/: capability.cpp  capability.h
src/config/default_param/device_info/: device_info.cpp  device_info.h
src/config/default_param/module/: module.cpp  module.h
src/config/default_param/module/application/: application.cpp  application.h
src/config/default_param/module/database/: database.cpp  database.h
src/config/default_param/module/hardware/: hardware.cpp  hardware.h
src/config/default_param/module/network/: network.cpp  network.h
src/config/default_param/module/storage/: storage.cpp  storage.h
src/config/default_param/module/system/: system.cpp  system.h
src/config/param/: param.cpp  param.h  param_check.h  param_def.h  param_default.cpp  param_patch.cpp  param_patch.h
src/config/param/common/: param_basic.h  param_module.h  param_sys.h
src/config/param/common/param_module/: param_db.h  param_device.h  param_hw.h  param_media.h  param_network.h  param_subsys.h
src/config/param/param_def/: module_db.if.h  module_db.pm.cpp  module_db.pm.h  module_device.if.h  module_device.pm.cpp  module_device.pm.h  module_hw.if.h  module_hw.pm.cpp  module_hw.pm.h  module_media.if.h  module_media.pm.cpp  module_media.pm.h  module_network.if.h  module_network.pm.cpp  module_network.pm.h  module_storage.if.h  module_storage.pm.cpp  module_storage.pm.h  module_subsys.if.h  module_subsys.pm.cpp  module_subsys.pm.h  param.if.h  param.pm.cpp  param.pm.h  param_basic.if.h  param_basic.pm.cpp  param_basic.pm.h  param_module.if.h  param_module.pm.cpp  param_module.pm.h  param_product.if.h  param_product.pm.cpp  param_product.pm.h  param_system.if.h  param_system.pm.cpp  param_system.pm.h
src/config/param/param_def/enums/: e_basic.if.h  e_basic.pm.cpp  e_basic.pm.h  e_db.if.h  e_db.pm.cpp  (+21 more)
src/config/param/param_doc/: doc.html  doc.json  doc.md
src/config/param/param_patch/: patch_common.cpp  patch_product.h  patch_product_example.cpp
src/config/param/param_pb/: mdb.pb.cc  mdb.pb.h  mdevice.pb.cc  mdevice.pb.h  mhw.pb.cc  mhw.pb.h  mmedia.pb.cc  mmedia.pb.h  mnetwork.pb.cc  mnetwork.pb.h  module_db.pb.cc  module_db.pb.h  module_device.pb.cc  module_device.pb.h  module_hw.pb.cc  module_hw.pb.h  module_media.pb.cc  module_media.pb.h  module_network.pb.cc  module_network.pb.h  module_storage.pb.cc  module_storage.pb.h  module_subsys.pb.cc  module_subsys.pb.h  mstorage.pb.cc  mstorage.pb.h  msubsys.pb.cc  msubsys.pb.h  param.pb.cc  param.pb.h  param_basic.pb.cc  param_basic.pb.h  param_module.pb.cc  param_module.pb.h  param_product.pb.cc  param_product.pb.h  param_system.pb.cc  param_system.pb.h
src/config/param/product/: product.h
src/config/param/proto/: mdb.proto  mdevice.proto  mhw.proto  mmedia.proto  mnetwork.proto  module_db.proto  module_device.proto  module_hw.proto  module_media.proto  module_network.proto  module_subsys.proto  mstorage.proto  param.proto  param_basic.proto  param_module.proto  param_product.proto  param_system.proto  protoc_cpp.sh
src/core/: datatype.h  module.h  parameter.cpp  parameter.h  version.cpp  version.h
src/log/: ars_iot_log.cpp  ars_iot_log.h  biot_log.cpp  biot_log.h
src/module/: README.md  module_interface.h
src/module/device/: README.md
src/module/hardware/: README.md
src/module/iot/microkernel/: ars_iot_boot.h  ars_iot_def.h  ars_iot_error.h  ars_iot_extend.h  ars_iot_kernel.cpp  ars_iot_kernel.h  ars_iot_kernel_def.h  ars_iot_kernel_event.h  ars_iot_kernel_log.h
src/module/media/: README.md
src/module/network/netapp/: README.md
src/module/network/netbasic/: README.md  netlink_control.h  netport_set.cpp  netport_set.h
src/module/subsys/: README.md
src/system/: README.md
tools/: gen_protobuf_cpp.py  gen_sec_param.cpp  register_device_id.cpp
tools/gen_device_id/: Cargo.toml  build.sh  gen_devid.cpp
tools/gen_device_id/src/: main.rs
unittest/: BUILD  quickstart  quickstart.cpp
(+35 files in other folders)
